deployment/kuberneties/reporanger-api-mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: reporanger-api-mysql
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app.k8s.io/name: reporanger-api-mysql
    app.k8s.io/part-of: reporanger 
  ports:
  - name: http
    port: 3306
---
