deployment/kuberneties/reporanger-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: reporanger-api
  labels:
    app.k8s.io/name: reporanger-api
    app.k8s.io/part-of: reporanger-api
    app.k8s.io/project: reporanger
spec:
  type: ClusterIP
  selector:
    app.k8s.io/name: reporanger-api
    app.k8s.io/part-of: reporanger-api
    app.k8s.io/project: reporanger
  ports:
    - name: http
      port: 80
      targetPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reporanger-api
  labels:
    app.k8s.io/name: reporanger-api
    app.k8s.io/part-of: reporanger-api
    app.k8s.io/project: reporanger
spec:
  replicas: 3
  selector:
    matchLabels:
      app.k8s.io/name: reporanger-api
      app.k8s.io/part-of: reporanger-api
      app.k8s.io/project: reporanger
  template:
    metadata:
      labels:
        app.k8s.io/name: reporanger-api
        app.k8s.io/part-of: reporanger-api
        app.k8s.io/project: reporanger
    spec:
      containers:
        - name: reporanger-api
          image: ssbostan/reporanger-api:latest
          ports:
            - name: http
              containerPort: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reporanger-api
  labels:
    app.k8s.io/name: reporanger-api
    app.k8s.io/part-of: reporanger-api
    app.k8s.io/project: reporanger
spec:
  rules:
    - host: reporanger-api.20302040.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: reporanger-api
                port:
                  name: http
